<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>kieker.develop</groupId>
	<artifactId>kieker.develop.parent</artifactId>
	<version>1.3.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<name>Kieker Development Tools</name>

	<modules>
		<module>kieker.develop.al</module>
		<module>kieker.develop.al.ide</module>
		<module>kieker.develop.al.ui</module>
		<module>kieker.develop.al.tests</module>
		<module>kieker.develop.al.feature</module>
		<module>kieker.develop.al.generator.java</module>
		<module>kieker.develop.al.generator.c</module>
		<module>kieker.develop.al.generator.perl</module>
		<module>kieker.develop.al.handler.pcm</module>
		<module>kieker.develop.al.handler.java</module>
		<module>kieker.develop.rl</module>
		<module>kieker.develop.rl.generator.java</module>
		<module>kieker.develop.rl.generator.c</module>
		<module>kieker.develop.rl.generator.delphi</module>
		<module>kieker.develop.rl.generator.perl</module>
		<module>kieker.develop.rl.ide</module>
		<module>kieker.develop.rl.ui</module>
		<module>kieker.develop.rl.tests</module>
		<module>kieker.develop.rl.feature</module>
		<module>kieker.develop.repository</module>
		<module>kieker.develop.target</module>
		<module>kieker.develop.semantics</module>
		<module>kieker.develop.semantics.java</module>
		<module>kieker.develop.rl.generator.java.tests</module>
		<module>kieker.develop.rl.cli</module>
		<module>kieker.develop.rl.cli.feature</module>
		<module>kieker.develop.rl.cli.site</module>
	</modules>

	<properties>
		<tycho.version>1.1.0</tycho.version>
		<tycho.extras.version>1.1.0</tycho.extras.version>
		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<memoryArgs>-Xms256M -Xmx1024M -XX:PermSize=256M -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
		<platform-version>[3.9,4.7)</platform-version>

		<checkstyle.config.location>cs-conf.xml</checkstyle.config.location>
		<xtext.version>2.12.0</xtext.version>
		<xtend.maven.version>2.13.0</xtend.maven.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<!-- properties for deploying the composite update site and zipped products on Sourceforge -->
		
		<!-- since this is used in the pluginManagement section, we need to make sure
			the path always points to this pom's directory; project.basedir will always point
			to the directory of the pom where the pluginManagement's plugins are used -->
		<ant-files-path>${project.basedir}/ant</ant-files-path>

		<!-- the subdirectory for the composite update site -->
		<updates.dir>kdt</updates.dir>
		<site.label>Kieker Development Tools Site</site.label>

		<remote.dir>/home/reiner/dump-kdt/</remote.dir>
	
		<!-- local source directory of p2 site for rsync -->
		<rsync.remote.dir>${remote.dir}/updates/</rsync.remote.dir>
		<!-- remote directory of p2 site for rsync -->
		<rsync.local.dir>${user.home}/p2.repositories/${updates.dir}/</rsync.local.dir>

		<!-- pass "-n" to perform a trial run with no changes made -->
		<dryrun></dryrun>

		<!-- repository URL -->
		<eclipse-repo.url>http://download.eclipse.org/releases/oxygen/</eclipse-repo.url>
		<kieler-repo.url>http://rtsys.informatik.uni-kiel.de/~kieler/updatesite/release_pragmatics_2017-11/</kieler-repo.url>
		<elk-repo.url>http://download.eclipse.org/elk/updates/releases/0.3.0/</elk-repo.url>

		<palladio-repo.url>https://sdqweb.ipd.kit.edu/eclipse/palladio/releases/latest</palladio-repo.url>
		<probespec-repo.url>https://sdqweb.ipd.kit.edu/eclipse/probespec/releases/1.2</probespec-repo.url>
		<palladio-fm-repo.url>https://sdqweb.ipd.kit.edu/eclipse/featuremodel/releases/latest</palladio-fm-repo.url>
		<palladio-sf-repo.url>https://sdqweb.ipd.kit.edu/eclipse/sensorframework/releases/latest</palladio-sf-repo.url>
		<palladio-wfe-repo.url>https://sdqweb.ipd.kit.edu/eclipse/workflowengine/releases/latest</palladio-wfe-repo.url>
		<kit-common-repo.url>https://sdqweb.ipd.kit.edu/eclipse/commons/releases/latest</kit-common-repo.url>
		<geco-repo.url>http://build.se.informatik.uni-kiel.de/eus/geco/snapshot/</geco-repo.url>
		<checkstyle.config.location>../cs-conf.xml</checkstyle.config.location>
		<xtext-repo.url>http://download.itemis.de/updates</xtext-repo.url>
	</properties>
	
	<profiles>
		<profile>
			<id>oxygen</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>

			<properties>
				<target-file-name>oxygen</target-file-name>
			</properties>
		</profile>

		<profile>
			<id>local</id>
			<properties>
				<target-file-name>local</target-file-name>
			</properties>
		</profile>
		
		<profile>
			<id>build-ide</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>

			<properties>
				<target-file-name>kieker.develop</target-file-name>
			</properties>

			<modules>
				<module>kieker.develop.rl.cli.site</module>
			</modules>
			
			<build>
				<plugins>
					<!-- specify all environments when building the IDE -->
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho.version}</version>
						<configuration>
							<pomDependencies>consider</pomDependencies>
							<executionEnvironment>JavaSE-1.8</executionEnvironment>
							<target>
								<artifact>
									<groupId>kieker.develop</groupId>
									<artifactId>kieker.develop.target</artifactId>
									<version>${project.version}</version>
									<classifier>${target-file-name}</classifier>
								</artifact>
							</target>
							<environments>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>linux</os>
									<ws>gtk</ws>
									<arch>x86_64</arch>
								</environment>
							</environments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<compilerArgs>
						<arg>-err:-forbidden,-discouraged</arg>
					</compilerArgs>
					<useProjectSettings>false</useProjectSettings>
				</configuration>
			</plugin>

			<!-- checkstyle plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<linkXRef>true</linkXRef>
					<propertyExpansion>basedir=${basedir}</propertyExpansion>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>8.8</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.7</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>src-gen</source>
									<source>xtend-gen</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<!-- xtend-maven-plugin is in pluginManagement instead of in plugins so 
				that it doesn't run before the exec-maven-plugin's *.mwe2 gen; this way we 
				can list it after. -->
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend.maven.version}</version>
					<executions>
						<execution>
							<phase>process-sources</phase>
							<goals>
								<goal>compile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>testCompile</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>gen-clean</id>
							<phase>clean</phase>
							<goals>
								<goal>clean</goal>
							</goals>
							<configuration>
								<filesets>
									<fileset>
										<directory>${basedir}/xtend-gen</directory>
										<directory>${basedir}/src-gen</directory>
									</fileset>
								</filesets>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>eclipse</id>
			<url>${eclipse-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>elk</id>
			<url>${elk-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>kieler</id>
			<url>${kieler-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>jcommander</id>
			<url>https://mvnrepository.com/artifact/com.beust/jcommander</url>
		</repository>

		<repository>
			<id>central</id>
			<name>Maven Central</name>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>geco</id>
			<url>${geco-repo.url}</url>
			<layout>p2</layout>
		</repository>

		<repository>
			<id>xtext</id>
			<layout>p2</layout>
			<url>${xtext-repo.url}</url>
		</repository>

		<repository>
			<id>probespec</id>
			<url>${probespec-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>palladio</id>
			<url>${palladio-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>palladioFeatureModel</id>
			<url>${palladio-fm-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>palladioSensorFramework</id>
			<url>${palladio-sf-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>palladioWorkflowEngine</id>
			<url>${palladio-wfe-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>kitCommons</id>
			<url>${kit-common-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>sonatype.oss.snapshot</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>codehaus-snapshots</id>
			<name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
			<url>http://nexus.codehaus.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
		</plugins>
	</reporting>
</project>
